--- a/application/package.json
+++ b/application/package.json
@@ -12,8 +12,9 @@
 	"license": "ISC",
 	"dependencies": {
 		"convict": "^6.2.4",
+		"csv-parse": "^5.5.5",
 		"dotenv": "^16.3.1",
-		"express": "^4.18.2",
+		"express": "^4.19.2",
 		"express-validator": "^7.0.1",
 		"helmet": "^7.1.0",
 		"ioredis": "^5.3.2",
