--- a/application/dynamofl.yaml
+++ b/application/dynamofl.yaml
@@ -20,7 +20,7 @@ logger:
   # destination in which the logger should be written, empty value will be considered as stdout
   destination: null
 
-sredis:
+redis:
   url: redis://test.g369sf.ng.0001.apse1.cache.amazonaws.com:6379
 
 
