--- a/dynamofl.yaml
+++ b/dynamofl.yaml
@@ -4,10 +4,12 @@ server:
 
   # The API listening port. By default is 0 (ephemeral) which serves as a dynamic port for testing purposes.
   # For production use, a specific port must be assigned
-  port: 5000
+  port: 4000
 
   # The server hostname. By default is "localhost". For production use, specific host_url can be assigned if needed.
   host: 0.0.0.0
+
+  url: "http://localhost:4000/v1"
 
 logger:
   # Which type of logger entries should actually be written to the target medium (e.g., stdout)
@@ -21,7 +23,9 @@ logger:
   destination: null
 
 redis:
-  url: redis://localhost
+  url: redis://localhost:6379
+  host: localhost
+  port: 6379
 
 
 postgres:
